# pythiaChargedDijet

./: .gitignore  CMakeLists.txt  Makefile  README  ejobs  hadd_pthard.C  ptEffCheckFunctions.C  pythia.Vim  pythiaChargedDijet.C  pythia_config_ATLAS.cmnd  pythia_config_ATLAS.cmnd.1  pythia_config_ATLAS.cmnd_pthard15  pythia_config_ATLAS.cmnd_pthard5  pythia_config_ATLAS.cmnd_pthardbins  pythia_config_Chanwook.cmnd  pythia_config_HI.cmnd  pythia_config_Monash2013.cmnd  pythia_config_Monash2013_npdf.cmnd  pythia_config_Monash2013_softQCD.cmnd  pythia_config_pythia8Def.cmnd  run-local.sh  run.sh  run_continously-pthardbins.sh  run_continously.sh  setup.sh
src/: AliJCDijetAna.cxx  AliJCDijetAna.h  AliJCDijetHistos.cxx  AliJCDijetHistos.h  AliJCDijetTask.cxx  AliJCDijetTask.h  JHepMCDataManager.cxx  JHepMCDataManager.h  src.hash
